src/components/Search/Search.module.scss
.root {
  padding-top: 3rem;
  width: 50%;
  min-width: 365px;
  margin: 0 auto;
  margin-top: 10vh;

  a {
    color: #00ccc1;
    text-decoration: none;
  }

  h1 {
    font-size: 3.5em;
    color: #ccc;
    margin-bottom: 1rem;
    text-align: center;
    font-weight: 100;
  }
}

.error {
  color: orangered;
  font-size: 1.5em;
  margin-top: 1rem;
}

.textOutput {
  margin-top: 2rem;
  background: transparent;

  font-size: 1.5em;
}


.searchContainer {
  position: relative;

  background: #0e0e0e;
  padding: 0.5em;
  border-radius: 8px;
  //border: 2px solid #00ccc1;
  //box-sizing: border-box;
  //outline-color: #00ccc1;
  //outline-width: 2px;

  box-shadow: inset 0 0 2px #000;
  outline: 2px solid rgba(255, 255, 255, 0.5);

  display: flex;
  flex-direction: column;

  .inputContainer {
    position: relative;


    input {
      color: #ccc;
      outline: none;
      font-size: 2em;
      padding: 0.5em;
      border: none;
      background: transparent;
      width: 100%;

      &::placeholder {
        color: rgba(204, 204, 204, 0.5);
      }
    }
  }

  .autocompleteContainer {
    transition: max-height 0.1s;

    width: 100%;
    background: #141414;
    overflow: hidden;
    max-height: 0;
    border-radius: 8px;

    .item {
      padding: 0.5em;
      cursor: pointer;
      color: #ccc;
      border-bottom: 1px solid rgba(255, 255, 255, 0.1);

      &:last-child {
        border-bottom: none;
      }

      &:hover {
        background: rgba(255, 255, 255, 0.2);
      }

      &.active {
        background: rgba(255, 255, 255, 0.1);
      }
    }

  }

  .autocompleteContainer:not(:empty) {
    max-height: 350px;
  }


  .controls {
    margin: 0.5em 1em;
    display: flex;
    flex-direction: row;

    > * {
      margin-right: 1em;
      &:last-child {
        margin-right: 0;
      }
    }
  }
}

.sourceList {
  margin-top: 2rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: start;

  .sourceItem {
    display: flex;
    align-items: flex-end;
    justify-content: start;
    margin-bottom: 1em;

    color: #ccc;
    font-size: 1.5em;
    width: 100%;

    img {
      width: 48px;
      height: 48px;
      margin-right: 0.5em;
      border-radius: 50%;
    }

    .info {
      display: flex;
      flex-direction: column;

      .title {
        text-decoration: none;
        color: inherit;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }

      .subtitle {
        opacity: 0.8;
        font-size: 0.5em;
      }
    }
  }
}

.intro {
  color: #ccc;
  font-size: 1.5em;
  padding: 0 0.5em;

  hr {
    margin-top: 4rem;
  }
}

